modules/015-admission-policy-engine/templates/policies/restricted/user/constraint.yaml
{{- include "pod_security_standard_restricted" (list . "D8PSSUser" ) }}
