modules/015-admission-policy-engine/templates/policies/restricted/user/test_samples/disallowed_run_root_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: testns
spec:
  securityContext:
    runAsNonRoot: false
  containers:
    - name: nginx
      image: nginx
