modules/015-admission-policy-engine/templates/policies/restricted/user/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-pss-user
tests:
  - name: d8-pss-user
    template: ctemplate.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed_pod.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_pod.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-root
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_run_root.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-root-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_run_root_pod.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-empty
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_empty.yaml
        assertions:
          - violations: yes
